2013-05-01  Charlie Zender  <zender@uci.edu>

	* Add byte arrays to in.cdl

	* NCO 4.3.2 release procedure:
 	Changes since nco-4_3_1: fxm
	cd ~/nco;cvs tag -d nco-4_3_2;cvs tag -d nco-4_3_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.2 release"
	cvs tag -c nco-4_3_2;cvs tag -c nco-4_3_2-1

	* NCO 4.3.1 release procedure:
 	Changes since nco-4_3_0: ncbo -G, --unn, symmetric, grp_brd
	cd ~/nco;cvs tag -d nco-4_3_1;cvs tag -d nco-4_3_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.1 release"
	cvs tag -c nco-4_3_1;cvs tag -c nco-4_3_1-1

	* Update Makefiles to build without failing new CDL files

2013-04-29  Charlie Zender  <zender@uci.edu>

	* Move buggy CDL code from in_grp.cdl to buggy.cdl

2013-04-28  Charlie Zender  <zender@uci.edu>

	* Use realistic temperatures in obs.cdl, cmip5.cdl

	* GCC 4.7.3 finally includes strcasestr() in string.h, I think

2013-04-26  Charlie Zender  <zender@uci.edu>

	* Document new ncbo, ncecat, group broadcasting features

2013-04-24  Charlie Zender  <zender@uci.edu>

	* ncrcat: Fix false positives on non-monotonicity checks in rec_crd_chk()
	by only checking monotonicity of first record coordinate encountered.

	* ncecat: Tidy OpenMP

2013-04-24  Pedro Vicente  <pvicente@uci.edu>

        * trv_tbl_mrk_prc_fix() Mark fixed/processed flag in table

        * ncecat test #6,7,8 Concatenate variables/groups: 1D,2D variables

2013-04-23  Pedro Vicente  <pvicente@uci.edu>

        * ncecat test #4,5 Concatenate variables/groups: scalars

2013-04-22  Charlie Zender  <zender@uci.edu>

	* ncecat: Tidy OpenMP

	* Document new ncbo, ncecat features

	* Document group broadcasting

2013-04-19  Charlie Zender  <zender@uci.edu>

	* ncatted: Fix passing NULL to strcmp() in netCDF4 code path.
	Bug identified and fix provided by Etienne Tourigny.

2013-04-17  Pedro Vicente  <pvicente@uci.edu>

        * nco_prc_cmn_nm() Process common objects

        * nco_cmn_nm_prt() Print list of common objects (same absolute path)
